[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
serde_json = "1.0.79"

ark-groth16 = "0.2.0"
ark-bn254 = "0.2.0"
ark-serialize = "0.2.0"
ark-std = "0.2.0"
ark-crypto-primitives = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
