[package]
name = "multiplier-cli"
version = "0.1.0"
edition = "2021"
authors = ["Magamedrasul I. <curryrasul@gmail.com>"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

color-eyre = "0.6.1"

ark-groth16 = "0.3.0"
ark-bn254 = "0.3.0"
ark-relations = "0.3.0"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-crypto-primitives = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"
